--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         #rose img {
             margin-top: 50px;
             width: 150px;
+            border-radius: 30px;
             transform: scale(0);
             transition: transform 1.5s ease-in-out;
             filter: drop-shadow(0px 0px 22px rgb(252, 82, 82));
